--- a/components/contents-panel/thumbnail/styles.module.css
+++ b/components/contents-panel/thumbnail/styles.module.css
@@ -1,30 +1,42 @@
 .container {
-  display: inline-block;
-  margin-bottom: 10px;
+  display: grid;
+  justify-content: center;
 
-  & img {
-    margin: 5px;
-    object-fit: cover;
-    width: 230px;
-    height: 230px;
-    border-radius: 4px;
-    transition: opacity 0.2s ease 0s;
+  & a {
+    user-select: none;
     cursor: pointer;
+    transition: opacity 0.2s ease 0s;
 
     &:hover {
       opacity: 0.8;
     }
   }
 
+  & img {
+    object-fit: cover;
+    width: var(--thumb-medium);
+    height: var(--thumb-medium);
+    border-radius: 4px 4px 4px 0px;
+    border: 2px var(--black-l) solid;
+    box-sizing: border-box;
+  }
+
   & .label {
-    text-align: center;
-    margin: 10px 0px;
+    text-align: left;
+    margin: -5px 0px 10px;
 
     & > span {
+      display: inline-block;
+      max-width: var(--thumb-medium);
       font-size: small;
-      background-color: #e4e4e4;
-      border-radius: 50px;
-      padding: 3px 10px;
+      color: var(--white);
+      background-color: var(--black-l);
+      box-sizing: border-box;
+      border-radius: 0px 0px 5px 5px;
+      padding: 4px 10px;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
   }
 }
