--- a/pages/install/styles.module.css
+++ b/pages/install/styles.module.css
@@ -11,7 +11,7 @@
       display: inline-block;
       width: 4px;
       height: 24px;
-      background-color: #444444;
+      background-color: var(--black-l);
       margin-right: 8px;
     }
   }
