--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,8 @@
   --black-ll: #777777;
   --black-lll: #eaeaea;
   --blue: #5b92ff;
+  --green: #3cf4ba;
+  --red: #ff5b5b;
 
   --thumb-small: 130px;
   --thumb-medium: 230px;
