Implement contents bundling logics

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,8 @@
   --black: #404040;
   --black-l: #525352;
   --black-ll: #777777;
-  --black-lll: #eaeaea;
+  --black-lll: #a8a8a8;
+  --black-llll: #eaeaea;
   --blue: #5b92ff;
   --green: #3cf4ba;
   --red: #ff5b5b;
