--- a/components/contents-panel/thumbnail/styles.module.css
+++ b/components/contents-panel/thumbnail/styles.module.css
@@ -9,6 +9,7 @@
     user-select: none;
     cursor: pointer;
     transition: opacity 0.2s ease 0s;
+    position: relative;
 
     &:hover {
       opacity: 0.8;
@@ -20,6 +21,7 @@
       width: var(--thumb-medium);
       height: var(--thumb-medium);
       overflow: hidden;
+      border-radius: 4px;
 
       &::before {
         content: '';
@@ -58,6 +60,7 @@
       align-items: center;
       color: transparent;
       font-size: 60px;
+      pointer-events: none;
     }
 
     &.selected {
@@ -74,6 +77,17 @@
         opacity: 0.5;
         transition: opacity 100ms ease-out 50ms;
         color: var(--white);
+      }
+    }
+
+    &.diffParent {
+      & img {
+        box-shadow: 5px -2px 0px 0px var(--black-ll), 10px -4px 0px 0px var(--black-lll);
+        transition: box-shadow 150ms cubic-bezier(0, 0, 0.15, 2.02);
+
+        &:hover {
+          box-shadow: 8px -2px 0px 0px var(--black-ll), 16px -4px 0px 0px var(--black-lll);
+        }
       }
     }
   }
