--- a/components/contents-panel/thumbnail/styles.module.css
+++ b/components/contents-panel/thumbnail/styles.module.css
@@ -83,7 +83,7 @@
     &.diffParent {
       & img {
         box-shadow: 5px -2px 0px 0px var(--black-ll), 10px -4px 0px 0px var(--black-lll);
-        transition: box-shadow 150ms cubic-bezier(0, 0, 0.15, 2.02);
+        transition: box-shadow 150ms cubic-bezier(0, 0, 0.15, 2.02), border-width 50ms ease-out;
 
         &:hover {
           box-shadow: 8px -2px 0px 0px var(--black-ll), 16px -4px 0px 0px var(--black-lll);
